fix whitespace for equiv

--- a/src/haz3lweb/www/style.css
+++ b/src/haz3lweb/www/style.css
@@ -1622,4 +1622,5 @@ svg.tile-selected {
   font-family: "Source Code Pro", monospace;
   display: inline-flex;
   align-items: center;
+  white-space: pre;
 }
